// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component Footer component renders correctly with props 1`] = `
<footer
  className="footer-class"
>
  <div
    className="footer-top"
  >
    <Styled(Row)>
      <Styled(Col)
        className="footer-top__slots"
        colSize={
          Object {
            "large": 3,
            "medium": 4,
            "small": 6,
          }
        }
        ignoreGutter={
          Object {
            "small": true,
          }
        }
      >
        <Styled(Button)
          customStyle="shadow-button"
        >
          <Styled(RichText) />
        </Styled(Button)>
      </Styled(Col)>
      <Styled(Col)
        className="footer-top__slots"
        colSize={
          Object {
            "large": 3,
            "medium": 4,
            "small": 6,
          }
        }
        ignoreGutter={
          Object {
            "medium": true,
            "small": true,
          }
        }
      >
        <Styled(Button)
          customStyle="shadow-button"
        >
          <Styled(RichText) />
        </Styled(Button)>
      </Styled(Col)>
      <Styled(Col)
        className="footer-top__slots"
        colSize={
          Object {
            "large": 3,
            "medium": 4,
            "small": 6,
          }
        }
        ignoreGutter={
          Object {
            "small": true,
          }
        }
      >
        <span
          id="extole_zone_global_footer"
        >
          <Styled(Button)
            customStyle="shadow-button"
            data-locator="global_referfriend"
          >
            <Styled(RichText) />
          </Styled(Button)>
        </span>
      </Styled(Col)>
      <Styled(Col)
        className="footer-top__slot--2"
        colSize={
          Object {
            "large": 3,
            "medium": 4,
            "small": 6,
          }
        }
      >
        <Styled(SocialMediaLinks) />
      </Styled(Col)>
    </Styled(Row)>
  </div>
  <Styled(Row)
    className="footer-middle mobile"
    fullBleed={true}
  >
    <FooterMiddleMobile
      className="footer-class"
      navLinkItems={Array []}
    />
  </Styled(Row)>
  <Styled(Row)
    className="footer-middle desktop"
  >
    <FooterMiddleDesktop
      className="footer-class"
      navLinks={Array []}
    />
  </Styled(Row)>
  <div
    className="footer-bottom"
  >
    <Styled(Row)
      className="fullbleed-mobile"
    >
      <Styled(Col)
        className="footer-bottom__slot--1 default-offset"
        colSize={
          Object {
            "large": 4,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(Copyright) />
        <div
          className="poc-hide"
        >
          <Styled(Button)>
            Get Registered User Info
          </Styled(Button)>
          <Styled(Button)>
            Get Order detail
          </Styled(Button)>
        </div>
      </Styled(Col)>
      <Styled(Col)
        className="footer-bottom__slot--2 default-offset"
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(LegalLinks)
          links={Array []}
        />
      </Styled(Col)>
      <Styled(Col)
        className="footer-bottom__slot--3 default-offset"
        colSize={
          Object {
            "large": 2,
            "medium": 8,
            "small": 6,
          }
        }
      />
    </Styled(Row)>
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(BodyStyle)
          bodySize="five"
          className="reference-id"
          tag="p"
        />
      </Styled(Col)>
    </Styled(Row)>
  </div>
</footer>
`;

exports[`Footer component Footer component renders correctly without props 1`] = `
<footer>
  <div
    className="footer-top"
  >
    <Styled(Row)>
      <Styled(Col)
        className="footer-top__slots"
        colSize={
          Object {
            "large": 3,
            "medium": 4,
            "small": 6,
          }
        }
        ignoreGutter={
          Object {
            "small": true,
          }
        }
      >
        <Styled(Button)
          customStyle="shadow-button"
        >
          <Styled(RichText) />
        </Styled(Button)>
      </Styled(Col)>
      <Styled(Col)
        className="footer-top__slots"
        colSize={
          Object {
            "large": 3,
            "medium": 4,
            "small": 6,
          }
        }
        ignoreGutter={
          Object {
            "medium": true,
            "small": true,
          }
        }
      >
        <Styled(Button)
          customStyle="shadow-button"
        >
          <Styled(RichText) />
        </Styled(Button)>
      </Styled(Col)>
      <Styled(Col)
        className="footer-top__slots"
        colSize={
          Object {
            "large": 3,
            "medium": 4,
            "small": 6,
          }
        }
        ignoreGutter={
          Object {
            "small": true,
          }
        }
      >
        <span
          id="extole_zone_global_footer"
        >
          <Styled(Button)
            customStyle="shadow-button"
            data-locator="global_referfriend"
          >
            <Styled(RichText) />
          </Styled(Button)>
        </span>
      </Styled(Col)>
      <Styled(Col)
        className="footer-top__slot--2"
        colSize={
          Object {
            "large": 3,
            "medium": 4,
            "small": 6,
          }
        }
      >
        <Styled(SocialMediaLinks) />
      </Styled(Col)>
    </Styled(Row)>
  </div>
  <Styled(Row)
    className="footer-middle mobile"
    fullBleed={true}
  >
    <FooterMiddleMobile
      navLinkItems={Array []}
    />
  </Styled(Row)>
  <Styled(Row)
    className="footer-middle desktop"
  >
    <FooterMiddleDesktop
      navLinks={Array []}
    />
  </Styled(Row)>
  <div
    className="footer-bottom"
  >
    <Styled(Row)
      className="fullbleed-mobile"
    >
      <Styled(Col)
        className="footer-bottom__slot--1 default-offset"
        colSize={
          Object {
            "large": 4,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(Copyright) />
        <div
          className="poc-hide"
        >
          <Styled(Button)>
            Get Registered User Info
          </Styled(Button)>
          <Styled(Button)>
            Get Order detail
          </Styled(Button)>
        </div>
      </Styled(Col)>
      <Styled(Col)
        className="footer-bottom__slot--2 default-offset"
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(LegalLinks)
          links={Array []}
        />
      </Styled(Col)>
      <Styled(Col)
        className="footer-bottom__slot--3 default-offset"
        colSize={
          Object {
            "large": 2,
            "medium": 8,
            "small": 6,
          }
        }
      />
    </Styled(Row)>
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(BodyStyle)
          bodySize="five"
          className="reference-id"
          tag="p"
        />
      </Styled(Col)>
    </Styled(Row)>
  </div>
</footer>
`;
